# applied-python-journey

./: .gitignore  main.py  pyproject.toml
.github/workflows/: lint.yaml
projects/01_screenshot/: main.py  pyproject.toml
