[project]
name = "applied-python-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]

[tool.uv.workspace]
members = [
    "projects/01_screenshot",
]
